# projeto-poetry

./: .dockerignore  .editorconfig  .gitignore  Dockerfile  Procfile  db.sqlite3  docker-compose.yml  env.dev  heroku.yml  pyproject.toml  pytest.ini  requirements.txt
.flake8/: setup.cfg
.github/workflows/: ci.yml  deploy.yml  django.yml  github-actions-demo.yml  test.yml
bookstore/: __init__.py  settings.py  settings_production.py  signals.py  urls.py
order/: factories.py  urls.py
order/migrations/: 0001_initial.py  0002_alter_orderitem_order_alter_orderitem_quantity.py
order/models/: order.py  order_item.py
order/serializers/: order_serializer.py
order/tests/: test_order_model.py
order/viewsets/: order_viewset.py
product/: admin.py  factories.py  urls.py
product/migrations/: 0001_initial.py  0002_category_product_delete_book.py
product/models/: category.py  product.py
product/serializers/: product_serializer.py
product/tests/: test_category_viewset.py  test_product_model.py
product/viewsets/: product_viewset.py
scripts/: deploy.sh
